[workspace]
[package]
version = "0.1.0"
name = "sp1-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
bincode = "1.3.3"
hex = "0.4.3"
serde = "1.0.204"
serde_json = "1.0.132"
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
  "rust-crypto",
] }
serde_cbor = "0.11.2"
sp1-build = "5.0.5"
sp1-core-machine = "5.0.5"
sp1-sdk = "5.0.5"

[build-dependencies]
sp1-build = "5.0.0"

[[bin]]
name = "fibo"
path = "src/bin/fibonacci.rs"

[[bin]]
name = "bigmem"
path = "src/bin/bigmem.rs"

[[bin]]
name = "sha2"
path = "src/bin/sha2.rs"

[[bin]]
name = "sha3"
path = "src/bin/sha3.rs"

[[bin]]
name = "sha2-chain"
path = "src/bin/sha2_chain.rs"

[[bin]]
name = "sha3-chain"
path = "src/bin/sha3_chain.rs"

[[bin]]
name = "tend"
path = "src/bin/tendermint.rs"

[[bin]]
name = "modpow"
path = "src/bin/modpow.rs"

[[bin]]
name = "all"
path = "src/main.rs"
