[workspace]
[package]
version = "0.1.0"
name = "zkm-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
num-traits = "0.2.18"
num-bigint = { version = "0.8.2", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
hex = "0.4.3"
bincode = "1.3.3"
serde = "1.0.204"
serde_json = "1.0.132"
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
    "rust-crypto",
] }
serde_cbor = "0.11.2"
zkm-build = { git = "https://github.com/ProjectZKM/Ziren.git", branch = "poseidon2" }
zkm-core-machine = { git = "https://github.com/ProjectZKM/Ziren.git", branch = "poseidon2" }
zkm-sdk = { git = "https://github.com/ProjectZKM/Ziren.git", branch = "poseidon2" }
# zkm-build = { path = "../../zkMIPS/crates/build" }
# zkm-core-machine = { path = "../../zkMIPS/crates/core/machine" }
# zkm-sdk = { path = "../../zkMIPS/crates/sdk" }

[build-dependencies]
zkm-build = { git = "https://github.com/ProjectZKM/Ziren.git", branch = "poseidon2" }
# zkm-build = { path = "../../zkMIPS/crates/build" }

[[bin]]
name = "fibo"
path = "src/bin/fibonacci.rs"

[[bin]]
name = "bigmem"
path = "src/bin/bigmem.rs"

[[bin]]
name = "sha2"
path = "src/bin/sha2.rs"

[[bin]]
name = "sha3"
path = "src/bin/sha3.rs"

[[bin]]
name = "sha2-chain"
path = "src/bin/sha2_chain.rs"

[[bin]]
name = "sha3-chain"
path = "src/bin/sha3_chain.rs"

[[bin]]
name = "tend"
path = "src/bin/tendermint.rs"

[[bin]]
name = "modpow"
path = "src/bin/modpow.rs"

[[bin]]
name = "mul2048"
path = "src/bin/mul2048.rs"

[[bin]]
name = "poseidon2"
path = "src/bin/poseidon2.rs"

[[bin]]
name = "poseidon2-chain"
path = "src/bin/poseidon2_chain.rs"


[[bin]]
name = "all"
path = "src/main.rs"
