[workspace]
[package]
version = "0.1.0"
name = "zkm2-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
hex = "0.4.3"
bincode = "1.3.3"
# zkm2-build = { git = "https://github.com/zkMIPS/zkm2.git", branch = "dev/init" }
# zkm2-core-machine = { git = "https://github.com/zkMIPS/zkm2.git", branch = "dev/init" }
# zkm2-sdk = { git = "https://github.com/zkMIPS/zkm2.git", branch = "dev/init" }
zkm2-build = { path = "../../zkm2/crates/build" }
zkm2-core-machine = { path = "../../zkm2/crates/core/machine" }
zkm2-sdk = { path = "../../zkm2/crates/sdk" }

[build-dependencies]
zkm2-build = { path = "../../zkm2/crates/build" }
