[workspace]
[package]
version = "0.1.0"
name = "zkm-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
hex = "0.4.3"
bincode = "1.3.3"
serde = "1.0.204"
serde_json = "1.0.132"
tendermint-light-client-verifier = { version = "0.35.0", default-features = false, features = [
  "rust-crypto",
] }
serde_cbor = "0.11.2"
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS.git" }
zkm-core-machine = { git = "https://github.com/zkMIPS/zkMIPS.git" }
zkm-sdk = { git = "https://github.com/zkMIPS/zkMIPS.git" }
# zkm-build = { path = "../../zkMIPS/crates/build" }
# zkm-core-machine = { path = "../../zkMIPS/crates/core/machine" }
# zkm-sdk = { path = "../../zkMIPS/crates/sdk" }

[build-dependencies]
zkm-build = { git = "https://github.com/zkMIPS/zkMIPS.git" }
# zkm-build = { path = "../../zkMIPS/crates/build" }

[[bin]]
name = "fibo"
path = "src/bin/fibonacci.rs"

[[bin]]
name = "bigmem"
path = "src/bin/bigmem.rs"

[[bin]]
name = "sha2"
path = "src/bin/sha2.rs"

[[bin]]
name = "sha3"
path = "src/bin/sha3.rs"

[[bin]]
name = "sha2-chain"
path = "src/bin/sha2_chain.rs"

[[bin]]
name = "sha3-chain"
path = "src/bin/sha3_chain.rs"

[[bin]]
name = "tend"
path = "src/bin/tendermint.rs"

[[bin]]
name = "all"
path = "src/main.rs"
