[workspace]
members = [
  "bigmem",
  "fibonacci",
  "sha2",
  "sha2-chain",
  "sha3",
  "sha3-chain",
  "tendermint",
]
resolver = "2"

[workspace.dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "c97ccf2" }
serde = "1.0.204"
serde_json = "1.0.132"

[workspace.package]
version = "1.1.0"
edition = "2021"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-4.0.0" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-4.0.0" } 
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "patch-0.16.9-sp1-4.0.0" }
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-4.0.0" }
