[workspace]
members = [
    "bigmem",
    "fibonacci",
    "modpow",
    "sha2",
    "sha2-chain",
    "sha3",
    "sha3-chain",
    "tendermint",
    "mul2048",
]
resolver = "2"

[workspace.dependencies]
sp1-lib = "5.0.5"
sp1-zkvm = "5.0.5"
serde = "1.0.204"
serde_json = "1.0.132"
num-bigint = { version = "0.8.2", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
num-traits = "0.2.18"

[workspace.package]
version = "1.1.0"
edition = "2021"
