[workspace]
members = [
  "bigmem",
  "fibonacci",
  "sha2",
  "sha2-chain",
  "sha3",
  "sha3-chain",
  "tendermint",
]
resolver = "2"

[workspace.dependencies]
zkm2-zkvm = { path = "../../../zkm2/crates/zkvm/entrypoint" }
serde = "1.0.204"
serde_json = "1.0.132"

[workspace.package]
version = "1.1.0"
edition = "2021"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/zkMIPS-patches/curve25519-dalek", branch = "patch-4.1.3" }
curve25519-dalek-ng = { git = "https://github.com/zkMIPS-patches/curve25519-dalek-ng", branch = "patch-4.1.1" } 
ecdsa-core = { git = "https://github.com/zkMIPS-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-0.16.9" }
rsa = { git = "https://github.com/zkMIPS-patches/RustCrypto-RSA.git", branch = "patch-rsa-0.9.6" }
secp256k1 = { git = "https://github.com/zkMIPS-patches/rust-secp256k1", branch = "patch-0.29.1" }
sha2-v0-10-8 = { git = "https://github.com/zkMIPS-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-0.10.8" }
substrate-bn = { git = "https://github.com/zkMIPS-patches/bn", branch = "patch-0.6.0" }
